--- a/micro.ipynb
+++ b/micro.ipynb
@@ -8,10 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "\n",
-    "\n"
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
@@ -186,7 +183,6 @@
     "                x_batch = x[start_index:end_index]\n",
     "                y_batch = y[start_index:end_index].reshape(1,x_batch.shape[0])\n",
     "                self.batchtrain(x_batch.T,y_batch)\n",
-    "\n",
     "                print(self.predict(testx.T,testy))\n",
     "\n",
     "\n",
