--- a/try2.ipynb
+++ b/try2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,124 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.866984</td>\n",
-       "      <td>0.004605</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.113226</td>\n",
-       "      <td>-0.553740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.643369</td>\n",
-       "      <td>-0.561538</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.731905</td>\n",
-       "      <td>-0.360165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.069752</td>\n",
-       "      <td>1.010440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>0.621144</td>\n",
-       "      <td>-0.406344</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>-0.640603</td>\n",
-       "      <td>0.675796</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>0.047312</td>\n",
-       "      <td>0.879076</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>1.178699</td>\n",
-       "      <td>-0.652375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>1.355684</td>\n",
-       "      <td>-0.500851</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           0         1\n",
-       "0   1.866984  0.004605\n",
-       "1   1.113226 -0.553740\n",
-       "2   0.643369 -0.561538\n",
-       "3   1.731905 -0.360165\n",
-       "4  -0.069752  1.010440\n",
-       "..       ...       ...\n",
-       "95  0.621144 -0.406344\n",
-       "96 -0.640603  0.675796\n",
-       "97  0.047312  0.879076\n",
-       "98  1.178699 -0.652375\n",
-       "99  1.355684 -0.500851\n",
-       "\n",
-       "[100 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trainx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +81,7 @@
     "    \"\"\"\n",
     "    Returns mean sqaured error given two arrays of the same length\n",
     "    \"\"\"\n",
-    "    return sum((t - p) ** 2 for t, p in zip(t, p)) / len(t)\n",
+    "    return sum((t-p)**2)/len(t)\n",
     "\n",
     "def softmax(x):\n",
     "    # assumes x is a vector\n",
@@ -208,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +135,8 @@
     "        # input is now the output activation\n",
     "        # If the type is regression, then the length of the output activation should be 1. \n",
     "        if self.type == 'regression':\n",
-    "            loss = mse(input,answers)\n",
+    "\n",
+    "            loss = mse(input.reshape(answers.shape),answers)\n",
     "        elif self.type == 'classification':\n",
     "            ## Accuracy instead of loss \n",
     "            currentsum = 0\n",
@@ -277,7 +161,7 @@
     "            ## If we are on the last iteration, then our activation function is linear if its regression, or softmax if its classification\n",
     "            if np.array_equal(self.biases[len(self.biases) - 1] ,b):\n",
     "                if self.type == 'regression':\n",
-    "                    input = dot\n",
+    "                    input = dot.T\n",
     "                elif self.type == 'classification':\n",
     "                    ## Ensure no overflow\n",
     "                    input = softmax(dot.T)\n",
@@ -288,10 +172,10 @@
     "        #First Layer\n",
     "        ## Regression case. Thus, the activation for our output for our output layer is linear. Our loss function is mean square error, thus delta (dL/dz) is -2(y-z).\n",
     "        if self.type == 'regression':\n",
-    "            dz = -2 * (y - storedactivations[-1])\n",
+    "            dz = 2 * (inputy - storedactivations[-1])\n",
     "            assert dz.shape == partialb[-1].shape\n",
     "            partialb[-1] = dz \n",
-    "            dw = np.dot(dz, storedactivations[-2].T)\n",
+    "            dw = np.dot(dz, storedactivations[-2])\n",
     "            assert dw.shape == partialw[-1].shape\n",
     "            partialw[-1]= dw\n",
     "        ## Classification case. Delta of the output layer is dependent on the output layer. Credit to https://towardsdatascience.com/derivative-of-the-softmax-function-and-the-categorical-cross-entropy-loss-ffceefc081d1 for doing the dirty work\n",
@@ -335,7 +219,7 @@
     "    \n",
     "\n",
     "            \n",
-    "    def train(self,X,Y,batchsize = 32,epoch = 50,testx = None,testy = None):\n",
+    "    def train(self,X,Y,batchsize = 32,epoch = 10,testx = None,testy = None):\n",
     "        assert isinstance(X, pd.DataFrame) \n",
     "        assert isinstance(Y,pd.Series)\n",
     "        # Constructs the array for training and test error\n",
@@ -344,7 +228,6 @@
     "            testloss = [self.forward(testx,testy)]\n",
     "        trainingloss = [self.forward(X,Y)]\n",
     "        Y = pd.factorize(Y)[0]\n",
-    "        print(trainingloss)\n",
     "        minibatchesX = np.array_split(X, len(X) // batchsize)\n",
     "        minibatchesY = np.array_split(Y, len(Y) // batchsize)\n",
     "        #split dataframe into batches of size batchsize\n",
@@ -357,6 +240,7 @@
     "                if testx and testy:\n",
     "                    print('Your test accuracy after epoch ' + str(i) + ' is ' + str(self.forward(testx,testy)))\n",
     "            elif self.type == 'regression':\n",
+    "                print(Y)\n",
     "                print('Your training error after epoch ' + str(i) + ' is ' + str(self.forward(X,Y)))\n",
     "                if testx and testy:\n",
     "                    print('Your test error after epoch ' + str(i) + ' is ' + str(self.forward(testx,testy)))\n",
@@ -370,96 +254,51 @@
     "\n",
     "            \n",
     "            \n",
-    "        \n",
-    "                \n"
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "train_X\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import make_moons, make_blobs\n",
     "\n",
     "X, y = make_moons(n_samples=100, noise=0.1)\n",
-    "y = y*2 - 1 # make y be -1 or1\n",
     "\n",
+    "y = y*2 - 1 # make y be -1 or1\n",
     "trainx = pd.DataFrame(X)\n",
     "trainy = pd.Series(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\caryk\\AppData\\Local\\Temp\\ipykernel_22420\\3628094181.py:97: RuntimeWarning: invalid value encountered in multiply\n",
+      "  delta = np.dot(self.weights[-i + 1].T,partialb[-i + 1]) * dz\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[32]\n",
-      "52\n",
-      "86\n",
-      "91\n",
-      "96\n",
-      "98\n",
-      "100\n",
-      "99\n",
-      "99\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n",
-      "100\n"
+      "Your training error after epoch 0 is 37353.77381974249\n",
+      "Your training error after epoch 1 is 37353.77381974249\n",
+      "Your training error after epoch 2 is 37353.77381974249\n",
+      "Your training error after epoch 3 is 37353.77381974249\n",
+      "Your training error after epoch 4 is 37353.77381974249\n",
+      "Your training error after epoch 5 is 37353.77381974249\n",
+      "Your training error after epoch 6 is 37353.77381974249\n",
+      "Your training error after epoch 7 is 37353.77381974249\n",
+      "Your training error after epoch 8 is 37353.77381974249\n",
+      "Your training error after epoch 9 is 37353.77381974249\n"
      ]
     }
    ],
@@ -471,27 +310,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "0     1\n",
-       "1     1\n",
+       "1    -1\n",
        "2     1\n",
        "3     1\n",
-       "4     1\n",
+       "4    -1\n",
        "     ..\n",
-       "95    1\n",
+       "95   -1\n",
        "96   -1\n",
-       "97   -1\n",
-       "98   -1\n",
-       "99   -1\n",
+       "97    1\n",
+       "98    1\n",
+       "99    1\n",
        "Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
