--- a/try2.ipynb
+++ b/try2.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n"
    ]
   },
   {
@@ -65,6 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "class NeuralNetwork:\n",
     "    def __init__(self,hidden = []) -> None:\n",
     "        self.sizes = hidden\n",
@@ -82,7 +84,8 @@
     "        self.map = {index: value for index, value in enumerate(Y.unique())}\n",
     "        self.biases = [np.zeros((y, 1)) for y in self.sizes[1:]]\n",
     "        self.weights = [np.random.randn(y, x) * np.sqrt(2/x) for x, y in zip(self.sizes[:-1],self.sizes[1:])]\n",
-    "\n",
+    "        self.trainacc = []\n",
+    "        self.testacc = []\n",
     "    # Helper for train function\n",
     "    # Feeds our input into our neural network and determines the loss \n",
     "    def forward(self,input,answers):\n",
@@ -177,9 +180,8 @@
     "        # Constructs the array for training and test error\n",
     "        self.construct(X,Y)\n",
     "        if testx and testy:\n",
-    "            testloss = [self.forward(testx,testy)]\n",
-    "        trainingloss = [self.forward(X,Y)]\n",
-    "        print(trainingloss)\n",
+    "            self.testacc.append(self.forward(testx,testy))\n",
+    "        self.testacc.append(self.forward(X,Y))\n",
     "        if self.type == 'classification':\n",
     "            Y = pd.factorize(Y)[0]\n",
     "        minibatchesX = np.array_split(X, len(X) // batchsize)\n",
@@ -190,10 +192,26 @@
     "                self.updatebatch(x,y)\n",
     "            \n",
     "            if self.type == 'classification':\n",
-    "                print('Your training accuracy after epoch ' + str(i + 1) + ' is ' + str(self.forward(X,Y)))\n",
+    "                trainaccuracy = self.forward(X,Y)\n",
+    "                self.trainacc.append(trainaccuracy)\n",
+    "                print('Your training accuracy after epoch ' + str(i + 1) + ' is ' + str(trainaccuracy))\n",
     "                if testx and testy:\n",
-    "                    print('Your test accuracy after epoch ' + str(i + 1) + ' is ' + str(self.forward(testx,testy)))\n",
+    "                    testaccuracy = self.forward(testx,testy)\n",
+    "                    print('Your test accuracy after epoch ' + str(i + 1) + ' is ' + str(testaccuracy))\n",
+    "                \n",
+    "    def graph(self):\n",
+    "        plt.xlabel('X-axis')\n",
+    "        plt.ylabel('Y-axis')\n",
+    "        plt.title('Accuracy/Epoch')\n",
+    "        if len(self.trainacc) == len(self.testacc):\n",
+    "            \n",
     "\n",
+    "    def predict(self,X):\n",
+    "        \"\"\"\n",
+    "        given some data frame X, return the predicted labels\n",
+    "        \"\"\"\n",
+    "        e\n",
+    "            \n",
     "                \n",
     "\n",
     "\n",
